create two new scenes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
     <link href="Content/reset.css" rel="stylesheet" />
     <link href="Content/game.css" rel="stylesheet" />
 </head>
+
 <body onload="init();">
     <div class="game">
         <canvas id="canvas" width="640" height="480"></canvas>
@@ -29,11 +31,15 @@
     <script src="Scripts/objects/scene.js"></script>
 
     <!-- Scene Scripts -->
+    <script src="Scripts/scenes/intro.js"></script>
     <script src="Scripts/scenes/fishScene.js"></script>
     <script src="Scripts/scenes/corallineScene.js"></script>
-    <script src="Scripts/scenes/intro.js"></script>
+    <script src="Scripts/scenes/shipwreckScene.js"></script>
+    <script src="Scripts/scenes/seaTurtleScene.js"></script>
+
 
     <!-- Main Game Scripts -->
     <script src="Scripts/core/game.js"></script>
 </body>
+
 </html>
