added level 2 another two scenes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <!-- Scene Scripts -->
     <script src="Scripts/scenes/intro.js"></script>
     <script src="Scripts/scenes/fishScene.js"></script>
+    <script src="Scripts/scenes/dolphinScene.js"></script>
+    <script src="Scripts/scenes/rockScene.js"></script>
     <script src="Scripts/scenes/corallineScene.js"></script>
     <script src="Scripts/scenes/shipwreckScene.js"></script>
     <script src="Scripts/scenes/seaTurtleScene.js"></script>
