added level 3 scenes

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="Scripts/scenes/rockScene.js"></script>
     <script src="Scripts/scenes/corallineScene.js"></script>
     <script src="Scripts/scenes/shipwreckScene.js"></script>
+    <script src="Scripts/scenes/snakeScene.js"></script>
     <script src="Scripts/scenes/seaTurtleScene.js"></script>
 
 
