--- a/index.html
+++ b/index.html
@@ -34,11 +34,18 @@
     <script src="Scripts/scenes/intro.js"></script>
     <script src="Scripts/scenes/fishScene.js"></script>
     <script src="Scripts/scenes/dolphinScene.js"></script>
+    <script src="Scripts/scenes/jellyfishScene.js"></script>
+    <script src="Scripts/scenes/waterPressureScene.js"></script>
     <script src="Scripts/scenes/rockScene.js"></script>
+    <script src="Scripts/scenes/crocodileScene.js"></script>
+    <script src="Scripts/scenes/lionfishScene.js"></script>
     <script src="Scripts/scenes/corallineScene.js"></script>
     <script src="Scripts/scenes/shipwreckScene.js"></script>
     <script src="Scripts/scenes/snakeScene.js"></script>
+    <script src="Scripts/scenes/treasureScene.js"></script>
     <script src="Scripts/scenes/seaTurtleScene.js"></script>
+    <script src="Scripts/scenes/sharkScene.js"></script>
+    <script src="Scripts/scenes/oxygenLackScene.js"></script>
 
 
     <!-- Main Game Scripts -->
